; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_diff_context_arg.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_diff_context_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@diff_context_arg.opt_diff_context_arg = internal global [9 x i8] zeroinitializer, align 1
@opt_diff_context = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"-U%u\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @diff_context_arg() #0 {
  %1 = alloca i8*, align 8
  %2 = load i64, i64* @opt_diff_context, align 8
  %3 = icmp slt i64 %2, 0
  br i1 %3, label %8, label %4

4:                                                ; preds = %0
  %5 = load i64, i64* @opt_diff_context, align 8
  %6 = call i32 @string_format(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @diff_context_arg.opt_diff_context_arg, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %4, %0
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %10

9:                                                ; preds = %4
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @diff_context_arg.opt_diff_context_arg, i64 0, i64 0), i8** %1, align 8
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i8*, i8** %1, align 8
  ret i8* %11
}

declare dso_local i32 @string_format(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
